# Jasp-desktop

./: CITATION.cff  CMakeLists.txt
Common/: CMakeLists.txt  log.h
CommonData/: CMakeLists.txt  column.cpp  column.h  columnutils.h  databaseinterface.cpp  databaseinterface.h  dataset.cpp  dataset.h  datasetbasenode.h  filter.cpp  label.cpp
Desktop/: CMakeLists.txt  mainwindow.cpp
Engine/: CMakeLists.txt  enginebase.cpp  (+2 more)
QMLComponents/: CMakeLists.txt  analysisbase.cpp  analysisbase.h  analysisform.cpp  analysisform.h  preferencesmodelbase.h  variableinfo.cpp  variableinfo.h
QMLComponents/ALTNavigation/: altnavcontrol.cpp  altnavigation.cpp  altnavigation.h  altnavscope.cpp  altnavtag.h
QMLComponents/components/JASP/Controls/: ALTNavTag.qml  AddColumnField.qml  AssignButton.qml  AssignedPairsVariablesList.qml  AssignedRepeatedMeasuresCells.qml  AssignedVariablesList.qml  AvailableVariablesList.qml  BayesFactorType.qml  Button.qml  CIField.qml  CheckBox.qml  CheckColumnIsFreeOrMineField.qml  Chi2TestTableView.qml  ColorPalette.qml  ColumnLayout.qml  ComponentsList.qml  ComputedColumnField.qml  ControlErrorMessage.qml  CrossButton.qml  CustomContrastsTableView.qml  Divider.qml  DoubleField.qml  DropDown.qml  FactorLevelList.qml  FactorsForm.qml  FactorsList.qml  FileSelector.qml  Form.qml  FormulaField.qml  Group.qml  HelpButton.qml  InputListView.qml  IntegerField.qml  JAGSTextArea.qml  JASPScrollBar.qml  JagsTableView.qml  Label.qml  MenuButton.qml  ModelTermsList.qml  PercentField.qml  (+18 more)
QMLComponents/controls/: checkboxbase.h  comboboxbase.h  componentslistbase.h  expanderbuttonbase.h  factorlevellistbase.h  factorsformbase.cpp  factorsformbase.h  groupboxbase.h  inputlistbase.h  jaspcontrol.h  jaspdoublevalidator.h  jasplistcontrol.h  radiobuttonbase.h  radiobuttonsgroupbase.h  rsyntaxhighlighter.h  sliderbase.h  tableviewbase.h  textareabase.h  textinputbase.cpp  textinputbase.h  variablesformbase.h  variableslistbase.h
QMLComponents/rsyntax/: formulabase.h
QMLComponents/utilities/: qmlutils.cpp  qmlutils.h  qutils.h
(+146 files in other folders)
